# Pytorch_Mri_Tumor_Detection

./: .gitignore  README.md  data_exploration.py  mri_tumors_classification.py  pyproject.toml  requirements.txt  secondary_module.py  test.py
conf/: config.yml
src/: data_exploration.py  data_loading.py  datasets.py  main.py  model.py  secondary_module.py  splitted_datasets.py  workflow_class.py
